@@ -1,27 +1,30 @@
 package com.cluting.clutingbackend.evaluation.service;
 
+import com.cluting.clutingbackend.application.domain.ApplicantInterviewTimeSlot;
 import com.cluting.clutingbackend.application.domain.Application;
+import com.cluting.clutingbackend.application.repository.ApplicantInterviewTimeSlotRepository;
 import com.cluting.clutingbackend.application.repository.ApplicationRepository;
 import com.cluting.clutingbackend.clubuser.domain.ClubUser;
 import com.cluting.clutingbackend.clubuser.repository.ClubUserRepository;
+import com.cluting.clutingbackend.evaluation.dto.request.InterviewIndividualQuestionRequestDto;
 import com.cluting.clutingbackend.evaluation.dto.request.InterviewQuestionSaveRequestDto;
+import com.cluting.clutingbackend.evaluation.dto.response.DocumentEvaluateResultResponseDto;
+import com.cluting.clutingbackend.evaluation.dto.response.DocumentEvaluateResultsResponseDto;
 import com.cluting.clutingbackend.evaluation.dto.response.InterviewPrepResponseDto;
 import com.cluting.clutingbackend.evaluation.dto.GroupResponse;
 import com.cluting.clutingbackend.evaluation.dto.document.ApplicantInfo;
 import com.cluting.clutingbackend.evaluation.dto.interview.*;
-import com.cluting.clutingbackend.global.enums.CurrentStage;
-import com.cluting.clutingbackend.global.enums.EvalType;
-import com.cluting.clutingbackend.global.enums.EvaluateStatus;
-import com.cluting.clutingbackend.global.enums.QuestionType2;
-import com.cluting.clutingbackend.global.enums.Stage;
+import com.cluting.clutingbackend.global.enums.*;
 import com.cluting.clutingbackend.global.security.CustomUserDetails;
 import com.cluting.clutingbackend.interview.domain.*;
 import com.cluting.clutingbackend.interview.repository.*;
 import com.cluting.clutingbackend.plan.domain.DocumentEvaluator;
 import com.cluting.clutingbackend.plan.domain.Group;
 import com.cluting.clutingbackend.plan.domain.Ideal;
+import com.cluting.clutingbackend.plan.repository.DocumentEvaluatorRepository;
 import com.cluting.clutingbackend.plan.repository.GroupRepository;
 import com.cluting.clutingbackend.plan.repository.IdealRepository;
+import com.cluting.clutingbackend.plan.repository.InterviewTimeSlotRepository;
 import com.cluting.clutingbackend.recruit.domain.Recruit;
 import com.cluting.clutingbackend.recruit.dto.response.RecruitNumResponseDto;
 import com.cluting.clutingbackend.recruit.repository.RecruitRepository;
@@ -34,6 +37,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -44,6 +48,7 @@ public class InterviewEvaluationService {
     private final RecruitRepository recruitRepository;
     private final GroupRepository groupRepository;
     private final ApplicationRepository applicationRepository;
+    private final DocumentEvaluatorRepository documentEvaluatorRepository;
     private final ClubUserRepository clubUserRepository;
     private final InterviewRepository interviewRepository;
     private final InterviewEvaluatorRepository interviewEvaluatorRepository;
@@ -52,32 +57,157 @@ public class InterviewEvaluationService {
     private final UserRepository userRepository;
     private final IdealRepository idealRepository;
     private final InterviewScoreRepository interviewScoreRepository;
+    private final InterviewTimeSlotRepository interviewTimeSlotRepository;
+    private final ApplicantInterviewTimeSlotRepository applicantInterviewTimeSlotRepository;
 
+    public InterviewClassifyResponseDto findInterviewAvailable(Long recruitId, String partName) {
+        List<InterviewTimeSlot> staffTimeSlot = interviewTimeSlotRepository.findAllByRecruit_Id(recruitId); // 운영진 면접 가능 시간
+        List<ApplicantInterviewTimeSlot> applicantTimeSlot = applicantInterviewTimeSlotRepository.findAllByApplication_Recruit_Id(recruitId); // 지원자 면접 가능 시간
+
+        InterviewClassifyResponseDto interviewClassifyResponseDto = new InterviewClassifyResponseDto();
+        Map<LocalDateTime, InterviewClassifyResponseDto.InterviewClassify> map = new HashMap<>();
+
+        for (InterviewTimeSlot interviewTimeSlot : staffTimeSlot) {
+            LocalDateTime timeSlot = interviewTimeSlot.getTime();
+            InterviewClassifyResponseDto.InterviewClassify classify = map.getOrDefault(timeSlot, new InterviewClassifyResponseDto.InterviewClassify());
+
+            List<InterviewClassifyResponseDto.InterviewAssign> staffList = classify.getStaff();
+            if (staffList == null) {
+                staffList = new ArrayList<>();
+            }
+
+            InterviewClassifyResponseDto.InterviewAssign staffAssign = new InterviewClassifyResponseDto.InterviewAssign();
+            staffAssign.setId(interviewTimeSlot.getClubUser().getId());
+            staffAssign.setName(interviewTimeSlot.getClubUser().getUser().getName());
+            staffList.add(staffAssign);
+
+            classify.setStaff(staffList);
+            map.put(timeSlot, classify);
+        }
+
+        for (ApplicantInterviewTimeSlot applicantInterviewTimeSlot : applicantTimeSlot) {
+            LocalDateTime timeSlot = applicantInterviewTimeSlot.getTime();
+            InterviewClassifyResponseDto.InterviewClassify classify = map.getOrDefault(timeSlot, new InterviewClassifyResponseDto.InterviewClassify());
+
+            List<InterviewClassifyResponseDto.InterviewAssign> applicantList = classify.getApplicant();
+            if (applicantList == null) {
+                applicantList = new ArrayList<>();
+            }
+
+            if (applicantInterviewTimeSlot.getApplication().getRecruit_group().equals(partName)) { // 파트 이름 검사
+                InterviewClassifyResponseDto.InterviewAssign applicantAssign = new InterviewClassifyResponseDto.InterviewAssign();
+                applicantAssign.setId(applicantInterviewTimeSlot.getApplication().getUser().getId());
+                applicantAssign.setName(applicantInterviewTimeSlot.getApplication().getUser().getName());
+                applicantList.add(applicantAssign);
+
+                classify.setApplicant(applicantList);
+                map.put(timeSlot, classify);
+            }
+        }
+
+        interviewClassifyResponseDto.setList(map);
+        return interviewClassifyResponseDto;
+    }
+
+    @Transactional(readOnly = true)
+    public InterviewEvaluationResultResponseDto findInterviewPassAndFail(Long recruitId, SortType sortType) {
+        List<Interview> interviews = interviewRepository.findAllByApplication_Recruit_Id(recruitId);
+
+        int passCnt = 0;
+        int failCnt = 0;
+        Map<String, Integer> cnt = new HashMap<>();
+        List<InterviewEvaluationResultResponseDto.InterviewEvaluateResult> passed = new ArrayList<>();
+        List<InterviewEvaluationResultResponseDto.InterviewEvaluateResult> failed = new ArrayList<>();
+
+        for (Interview interview : interviews) {
+            if (interview.getState() == EvaluateStatus.PASS) {
+                passCnt++;
+                String groupName = interview.getRecruit_group();
+                cnt.put(groupName, cnt.getOrDefault(groupName, 0) + 1);
+                InterviewEvaluationResultResponseDto.InterviewEvaluateResult result = InterviewEvaluationResultResponseDto.InterviewEvaluateResult.toDto(
+                        interview,
+                        Stage.AFTER,
+                        "합격"
+                );
+                passed.add(result);
+            } else if (interview.getState() == EvaluateStatus.FAIL) {
+                failCnt++;
+                InterviewEvaluationResultResponseDto.InterviewEvaluateResult result = InterviewEvaluationResultResponseDto.InterviewEvaluateResult.toDto(
+                        interview,
+                        Stage.AFTER,
+                        "불합격"
+                );
+                failed.add(result);
+            }
+        }
+
+        sortInterviewAndAssignRank(passed);
+        sortInterviewAndAssignRank(failed);
+
+        if (sortType == SortType.NEWEST) {
+            passed.sort(Comparator.comparing(InterviewEvaluationResultResponseDto.InterviewEvaluateResult::getCreatedAt).reversed());
+            failed.sort(Comparator.comparing(InterviewEvaluationResultResponseDto.InterviewEvaluateResult::getCreatedAt).reversed());
+        } else if (sortType == SortType.OLDEST) {
+            passed.sort(Comparator.comparing(InterviewEvaluationResultResponseDto.InterviewEvaluateResult::getCreatedAt));
+            failed.sort(Comparator.comparing(InterviewEvaluationResultResponseDto.InterviewEvaluateResult::getCreatedAt));
+        } else if (sortType == SortType.INORDER) {
+            passed.sort(Comparator.comparing(InterviewEvaluationResultResponseDto.InterviewEvaluateResult::getName));
+            failed.sort(Comparator.comparing(InterviewEvaluationResultResponseDto.InterviewEvaluateResult::getName));
+        } else {
+            throw new IllegalArgumentException("정의되지 않은 정렬 방식 입니다.");
+        }
+
+        return InterviewEvaluationResultResponseDto.builder()
+                .passedCnt(passCnt)
+                .byGroup(cnt)
+                .passed(passed)
+                .failedCnt(failCnt)
+                .failed(failed)
+                .build();
+    }
+
+    private void sortInterviewAndAssignRank(List<InterviewEvaluationResultResponseDto.InterviewEvaluateResult> list) {
+        list.sort((o1, o2) -> Integer.compare(o2.getScore(), o1.getScore())); // 내림차순 정렬
+        for (int i = 0; i < list.size(); i++) {
+            list.get(i).setRank(i + 1); // 1부터 시작하는 순위 설정
+        }
+    }
 
     public List<InterviewEvaluationResponse> getInterviewEvaluations(Long recruitId, CustomUserDetails currentUser, InterviewEvaluationRequest request) {
-        Long currentClubUserId = currentUser.getUser().getId();
+        Long currentClubUserId = currentUser.getUser() != null ? currentUser.getUser().getId() : null;
 
         // Step 1: 모집 공고 ID로 Application 조회
         List<Application> applications = applicationRepository.findByRecruitId(recruitId);
+        if (applications == null || applications.isEmpty()) {
+            return Collections.emptyList(); // Application이 없으면 빈 리스트 반환
+        }
 
         // Step 2: Application ID로 Interview 조회
         List<Interview> interviews = interviewRepository.findByApplicationIdIn(
                 applications.stream().map(Application::getId).collect(Collectors.toList()));
+        if (interviews == null || interviews.isEmpty()) {
+            return Collections.emptyList(); // Interview가 없으면 빈 리스트 반환
+        }
 
         // Step 3: Interview ID로 InterviewEvaluator 조회 및 단계별 분리
         List<InterviewEvaluator> evaluators = interviewEvaluatorRepository.findByInterviewIdIn(
                 interviews.stream().map(Interview::getId).collect(Collectors.toList()));
+        if (evaluators == null || evaluators.isEmpty()) {
+            return Collections.emptyList(); // Evaluators가 없으면 빈 리스트 반환
+        }
 
         return evaluators.stream()
                 .filter(evaluator -> evaluator.getClubUser() != null
+                        && evaluator.getClubUser().getUser() != null
                         && evaluator.getClubUser().getUser().getId().equals(currentClubUserId)
                         && (request.getGroupName() == null ||
-                        (evaluator.getGroup() != null &&
-                                evaluator.getGroup().getName().equals(request.getGroupName()))))
+                        (evaluator.getGroup() != null && evaluator.getGroup().getName() != null
+                                && evaluator.getGroup().getName().equals(request.getGroupName()))))
                 .map(evaluator -> mapToResponse(evaluator, request.getSortOrder()))
                 .sorted((resp1, resp2) -> sortResponses(resp1, resp2, request.getSortOrder()))
                 .collect(Collectors.toList());
     }
+
 
     private InterviewEvaluationResponse mapToResponse(InterviewEvaluator evaluator, String sortOrder) {
         Interview interview = evaluator.getInterview();
@@ -157,13 +287,22 @@ public class InterviewEvaluationService {
     public Map<String, List<InterviewEvaluationCompleteResponse>> getCompletedEvaluations(Long recruitId) {
         // 1. recruitId로 Application 목록 찾기
         List<Application> applications = applicationRepository.findByRecruitId(recruitId);
+        if (applications == null || applications.isEmpty()) {
+            return new HashMap<>();  // applications가 null이거나 비어 있으면 빈 맵 반환
+        }
 
         // 2. 합격(PASS)과 불합격(FAIL) 상태로 Interview 분리
         List<Interview> interviews = interviewRepository.findByApplicationIn(applications);
+        if (interviews == null) {
+            interviews = new ArrayList<>();  // interviews가 null이면 빈 리스트로 초기화
+        }
+
         List<InterviewEvaluationCompleteResponse> passedEvaluations = new ArrayList<>();
         List<InterviewEvaluationCompleteResponse> failedEvaluations = new ArrayList<>();
 
         for (Interview interview : interviews) {
+            if (interview == null) continue;  // interview가 null이면 건너뜀
+
             // 3. Interview의 상태에 따라 처리
             if (EvaluateStatus.PASS.equals(interview.getState())) {
                 passedEvaluations.add(mapToEvaluationResponse(interview));
@@ -179,6 +318,7 @@ public class InterviewEvaluationService {
 
         return result;
     }
+
 
     private InterviewEvaluationCompleteResponse mapToEvaluationResponse(Interview interview) {
         // 지원자 정보 가져오기
@@ -300,8 +440,12 @@ public class InterviewEvaluationService {
         Application application = interview.getApplication();
         User user = application.getUser();
 
+        if (user == null) {
+            throw new DocumentEvaluationService.ResourceNotFoundException("User not found");
+        }
+
         List<InterviewEvaluator> evaluators = interviewEvaluatorRepository.findByInterviewId(interviewId);
-        String groupName = evaluators.isEmpty() ? null : evaluators.get(0).getGroup().getName();
+        String groupName = (evaluators.isEmpty() || evaluators.get(0).getGroup() == null) ? null : evaluators.get(0).getGroup().getName();
 
         ApplicantInfo applicantInfo = ApplicantInfo.of(
                 user.getName(),
@@ -312,7 +456,7 @@ public class InterviewEvaluationService {
                 user.getSchool(),
                 user.getMajor(),
                 user.getDoubleMajor(),
-                String.valueOf(user.getSemester()),
+                user.getSemester() != null ? String.valueOf(user.getSemester()) : null, // Null check for semester
                 groupName
         );
 
@@ -327,12 +471,12 @@ public class InterviewEvaluationService {
             InterviewAnswer answer = question.getInterviewAnswer();
             groupedQuestions.get(question.getType()).add(InterviewQA.of(
                     question.getContent(),
-                    answer == null ? null : answer.getContent()
+                    answer != null ? answer.getContent() : null
             ));
         }
 
         // 3. 인재상
-        List<Ideal> ideals = idealRepository.findByGroupId(evaluators.isEmpty() ? null : evaluators.get(0).getGroup().getId());
+        List<Ideal> ideals = idealRepository.findByGroupId(evaluators.isEmpty() || evaluators.get(0).getGroup() == null ? null : evaluators.get(0).getGroup().getId());
         List<String> idealDetails = ideals.stream()
                 .map(Ideal::getContent)
                 .collect(Collectors.toList());
@@ -343,14 +487,19 @@ public class InterviewEvaluationService {
         // 5. 다른 운영진 평가 보기
         List<InterviewEvaluatorScores> evaluatorScores = evaluators.stream()
                 .map(evaluator -> InterviewEvaluatorScores.of(evaluator, interviewScoreRepository))
-                .toList();
+                .collect(Collectors.toList());
 
         // 6. 내 평가 보기
-        Long currentClubUserId = currentUser.getUser().getId();
+        Long currentClubUserId = currentUser.getUser() != null ? currentUser.getUser().getId() : null;
+        if (currentClubUserId == null) {
+            throw new DocumentEvaluationService.ResourceNotFoundException("Current Club User not found");
+        }
+
         ClubUser currentClubUser = clubUserRepository.findById(currentClubUserId)
                 .orElseThrow(() -> new DocumentEvaluationService.ResourceNotFoundException("Club User not found"));
+
         InterviewEvaluatorScores myEvaluation = evaluators.stream()
-                .filter(evaluator -> evaluator.getClubUser().getId().equals(currentClubUserId))
+                .filter(evaluator -> evaluator.getClubUser() != null && evaluator.getClubUser().getId().equals(currentClubUserId))
                 .findFirst()
                 .map(evaluator -> InterviewEvaluatorScores.of(evaluator, interviewScoreRepository))
                 .orElse(null);
@@ -419,17 +568,24 @@ public class InterviewEvaluationService {
     public List<InterviewResponseDTO> getInterviewScheduleByRecruitId(Long recruitId) {
         // Step 1: Application 엔티티 조회
         List<Application> applications = applicationRepository.findAllByRecruitId(recruitId);
-        List<Long> applicationIds = applications.stream().map(Application::getId).collect(Collectors.toList());
+        List<Long> applicationIds = applications.stream()
+                .map(Application::getId)
+                .filter(Objects::nonNull)  // Null 체크 추가
+                .collect(Collectors.toList());
 
         // Step 2: Interview 엔티티 조회
         List<Interview> interviews = interviewRepository.findAllByApplicationIdIn(applicationIds);
-        List<Long> interviewIds = interviews.stream().map(Interview::getId).collect(Collectors.toList());
+        List<Long> interviewIds = interviews.stream()
+                .map(Interview::getId)
+                .filter(Objects::nonNull)  // Null 체크 추가
+                .collect(Collectors.toList());
 
         // Step 3: InterviewEvaluator 엔티티 조회
         List<InterviewEvaluator> evaluators = interviewEvaluatorRepository.findAllByInterviewIdIn(interviewIds);
 
         // Step 4: 날짜 및 시간대 오름차순 정렬
         List<InterviewEvaluator> sortedEvaluators = evaluators.stream()
+                .filter(e -> e.getInterviewTime() != null)  // InterviewTime이 null인 경우 제외
                 .sorted(Comparator.comparing(e -> e.getInterviewTime())) // 날짜 및 시간대 기준 정렬
                 .collect(Collectors.toList());
 
@@ -455,6 +611,7 @@ public class InterviewEvaluationService {
 
                                 // 그룹별 데이터 분리
                                 Map<Long, List<InterviewEvaluator>> groupedByGroup = evaluatorsAtTime.stream()
+                                        .filter(evaluator -> evaluator.getGroup() != null)  // 그룹이 null인 경우 제외
                                         .collect(Collectors.groupingBy(evaluator -> evaluator.getGroup().getId()));
 
                                 List<InterviewResponseDTO.TimeSlotDTO.GroupDTO> groups = groupedByGroup.entrySet().stream()
@@ -464,44 +621,50 @@ public class InterviewEvaluationService {
 
                                             // 면접관 이름 리스트
                                             List<Long> clubUserIds = groupEvaluators.stream()
+                                                    .filter(evaluator -> evaluator.getClubUser() != null)  // ClubUser가 null인 경우 제외
                                                     .map(evaluator -> evaluator.getClubUser().getId())
                                                     .distinct()
                                                     .collect(Collectors.toList());
+
                                             List<String> evaluatorNames = clubUserRepository.findAllByIdIn(clubUserIds).stream()
-                                                    .map(clubUser -> clubUser.getUser().getName())
+                                                    .map(clubUser -> clubUser.getUser() != null ? clubUser.getUser().getName() : null)  // User가 null인 경우 처리
+                                                    .filter(Objects::nonNull)  // Null 제외
                                                     .collect(Collectors.toList());
 
                                             // 면접자 이름 리스트
                                             List<Long> applicantIds = groupEvaluators.stream()
+                                                    .filter(evaluator -> evaluator.getInterview() != null && evaluator.getInterview().getApplication() != null && evaluator.getInterview().getApplication().getUser() != null)
                                                     .map(e -> e.getInterview().getApplication().getUser().getId())
                                                     .distinct()
                                                     .collect(Collectors.toList());
+
                                             List<String> applicantNames = userRepository.findAllByIdIn(applicantIds).stream()
-                                                    .map(User::getName)
+                                                    .map(user -> user.getName())
                                                     .collect(Collectors.toList());
 
                                             return InterviewResponseDTO.TimeSlotDTO.GroupDTO.builder()
-                                                    .groupName(groupEvaluators.get(0).getGroup().getName()) // 그룹 이름
+                                                    .groupName(groupEvaluators.get(0).getGroup() != null ? groupEvaluators.get(0).getGroup().getName() : null) // 그룹 이름 null 처리
                                                     .interviewer(evaluatorNames)
                                                     .interviewee(applicantNames)
                                                     .build();
                                         }).collect(Collectors.toList());
 
                                 return InterviewResponseDTO.TimeSlotDTO.builder()
-                                        .time(time.toString())
+                                        .time(time != null ? time.toString() : null) // 시간대 null 처리
                                         .groups(groups)
                                         .build();
                             }).collect(Collectors.toList());
 
                     return InterviewResponseDTO.builder()
-                            .date(date.toString())
+                            .date(date != null ? date.toString() : null)  // 날짜 null 처리
                             .timeSlots(timeSlots)
                             .build();
                 }).collect(Collectors.toList());
 
         return response;
     }
-    
+
+
     // 면접 가능 일정 리스트 조회
 //    public List<InterviewAvailableResponseDto> findAvailable(Long recruitId) {
 //    }
@@ -623,25 +786,38 @@ public class InterviewEvaluationService {
             }
         }
 
-        // 7. 개인 질문 저장
-        if (interviewQuestionSaveRequestDto.getIndividual() != null) {
-            for (InterviewQuestionSaveRequestDto.InterviewIndividualQuestion individualQuestion : interviewQuestionSaveRequestDto.getIndividual()) {
-                Interview targetInterview = interviews.stream()
-                        .filter(interview -> interview.getApplication().getUser().getName().equals(individualQuestion.getName()) &&
-                                interview.getApplication().getUser().getPhone().equals(individualQuestion.getPhone()))
-                        .findFirst()
-                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "대상을 찾을 수 없습니다: " + individualQuestion.getName()));
-
-                InterviewEvaluator evaluator = interviewEvaluatorRepository.findByInterview_Id(targetInterview.getId());
-
-                for (String question : individualQuestion.getQuestion()) {
-                    interviewQuestionRepository.save(
-                            InterviewQuestion.of(evaluator, targetInterview, question, QuestionType2.PERSONAL)
+        // 7. 면접 평가 기준 저장
+        Map<String, InterviewQuestionSaveRequestDto.InterviewEvaluateCriteria> criteriaMap = interviewQuestionSaveRequestDto.getCriteria();
+        for (Group g : groups) {
+            for (String groupName : criteriaMap.keySet()) {
+                if (g.getName().equals(groupName)) {
+                    InterviewEvaluator evaluator = interviewEvaluatorRepository.findByGroupId(g.getId());
+                    InterviewQuestionSaveRequestDto.InterviewEvaluateCriteria c = criteriaMap.get(groupName);
+                    interviewCriteriaRepository.save(
+                            InterviewCriteria.of(evaluator, c.getName(), c.getContent(), c.getScore())
                     );
                 }
             }
         }
+    }
 
+    @Transactional
+    public void saveIndividualQuestion(Long recruitId, Long userId, InterviewIndividualQuestionRequestDto interviewIndividualQuestionRequestDto) {
+        Interview interview = interviewRepository.findByUser_IdAndRecruit_Id(recruitId, userId)
+                .orElseThrow(() -> new IllegalArgumentException("면접을 찾을 수 없음"));
+        List<InterviewEvaluator> interviewEvaluators = interviewEvaluatorRepository.findByInterviewId(interview.getId());
+
+        for (String question : interviewIndividualQuestionRequestDto.getQuestion()) {
+            for (InterviewEvaluator interviewEvaluator : interviewEvaluators) {
+                interviewQuestionRepository.save(
+                        InterviewQuestion.of(interviewEvaluator, interview, question, QuestionType2.PERSONAL)
+                );
+            }
+        }
+    }
+
+    // 면접 합격자 리스트
+    public void interviewResult(Long recruitId, SortType sortType) {
     }
 
     public ClubUser findClubUser(Long clubUserId) {
